--- a/index.html
+++ b/index.html
@@ -20,46 +20,49 @@
 
         .verification-container {
             text-align: center;
-            background-color: #1F2937;
-            padding: 60px 20px; /* Adjusted to move the text higher */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            border-radius: 12px;
+            padding-top: 100px; /* Pushes the content higher */
+            background-color: #111827; /* Background color same as body to blend in */
+            width: 100%;
+            max-width: 500px;
         }
 
         .verification-container h1 {
-            font-size: 32px; /* Larger font size */
+            font-size: 28px;
             color: #FFFFFF;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             font-weight: 600;
+            margin-top: 0;
         }
 
         .verification-container p {
-            font-size: 18px; /* Larger font size */
+            font-size: 16px;
             color: #E5E7EB;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         .verification-container button {
             font-size: 20px; /* Larger font size */
             font-weight: 600;
             color: #FFFFFF;
-            background-color: #10B981;
+            background-color: #166534; /* Darker green for the button */
             border: none;
             border-radius: 8px;
-            padding: 15px 40px; /* Larger button size */
+            padding: 15px 0; /* Taller button */
             cursor: pointer;
             transition: background-color 0.3s;
+            width: 100%;
+            max-width: 400px; /* Makes the button as wide as the text */
         }
 
         .verification-container button:hover {
-            background-color: #059669;
+            background-color: #14532D;
         }
 
         .container {
             text-align: center;
             width: 90%;
             max-width: 380px;
-            margin-top: 5%; /* Adjusted by 1 cm */
+            margin-top: 2cm; /* Adjusted by 2 cm */
             position: relative;
             border-radius: 20px;
             padding: 20px;
