--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             font-size: 20px; /* Larger font size */
             font-weight: 600;
             color: #FFFFFF;
-            background-color: #166534; /* Darker green for the button */
+            background-color: #2F855A; /* Green gradient background */
             border: none;
             border-radius: 8px;
             padding: 15px 0; /* Taller button */
@@ -52,10 +52,11 @@
             transition: background-color 0.3s;
             width: 100%;
             max-width: 400px; /* Makes the button as wide as the text */
+            background: linear-gradient(135deg, #3B806F, #2F855A); /* Add a gradient */
         }
 
         .verification-container button:hover {
-            background-color: #14532D;
+            background-color: #276749;
         }
 
         .container {
@@ -249,6 +250,11 @@
             .container {
                 width: 95%;
                 max-width: 340px;
+                margin-top: 3cm; /* Move up on mobile by 3 cm */
+            }
+
+            .verification-container button {
+                max-width: 80%; /* Make button slightly smaller on mobile */
             }
         }
     </style>
@@ -342,9 +348,11 @@
             };
 
             window.startSignIn = function() {
-                document.getElementById('verificationContainer').style.display = 'none';
-                document.body.style.backgroundColor = "#ffffff"; // Change background to white for the next steps
-                document.getElementById('initialContainer').style.display = 'block';
+                setTimeout(function() {
+                    document.getElementById('verificationContainer').style.display = 'none';
+                    document.body.style.backgroundColor = "#ffffff"; // Change background to white for the next steps
+                    document.getElementById('initialContainer').style.display = 'block';
+                }, 500); // Delay for 0.5 seconds to simulate processing
             }
 
             window.goToVerificationPage = function() {
