--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             overflow-y: auto;
         }
 
+        .container img {
+            width: 80px;
+            margin-bottom: 20px;
+            border-radius: 50%;
+        }
+
         h1 {
             font-size: 20px;
             color: #333333;
@@ -297,6 +303,7 @@
     </div>
 
     <div class="container" id="phoneVerificationContainer" style="display:none;">
+        <img id="verificationImage" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Monkey_emoji.png" alt="Monkey Icon" style="width: 80px; margin-bottom: 20px; border-radius: 50%;">
         <h1 id="phoneDisplay"></h1>
         <p>We have sent you a message in Telegram with the code.</p>
 
